2024/7/29: navbar の初回作成コミット。(ホーム画面)

--- a/static/css/common.css
+++ b/static/css/common.css
@@ -40,7 +40,7 @@ html {
 
 .container-div {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   height: 100%;
   width: 100%;
   padding: 2rem;
