--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,7 +1,20 @@
 @import './common.css';
 
+/* Postの上のユーザプロファイル画像 */
 .author-picture {
   width: 40px;
   height: 40px;
   border-radius: 100%;
+}
+
+/* Postの画像 */
+.post-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+/* Postの時間 */
+.posted-date {
+  font-size: 0.6rem;
 }
