--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,5 +1,41 @@
 @import './common.css';
 
+/* SearchModalのスタイル */
+.search-modal {
+  position: relative;
+  height: 80vh;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: grid;
+  justify-content: center;
+  grid-template-columns: 10% 80% 10%;
+  grid-template-rows: 20% 80%;
+  align-items: center;
+  z-index: 100;
+}
+
+/* SearchModalのボタンDiv */
+.search-buttons-div {
+  grid-column-start: 2;
+  grid-row-start: 1;
+}
+
+/* SearchModalの検索結果Div */
+#search-results {
+  grid-column-start: 2;
+  grid-row-start: 2;
+  overflow-y: auto;
+  height: 100%;
+}
+
+/* SearchModalのクローズボタン */
+.close-button {
+  /* position: absolute;
+  top: 10px;
+  right: 10px; */
+  cursor: pointer;
+}
+
 /* Postの上のユーザプロファイル画像 */
 .author-picture {
   width: 40px;
