#09-feat: コメントのコンテンツが表示されるように。また、コメントしたユーザのプロファイルと名前が表示されるように。

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -59,3 +59,14 @@
 .like-button {
   cursor: pointer;
 }
+
+/* コメントのタイトル */
+[class^="comment-title-"] {
+  cursor: pointer;
+}
+
+/* Postのコメント */
+[class^="comment-li-"] {
+  list-style-type: none;
+  font-size: small;
+}
