--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,4 +1,4 @@
-@import './common.css';
+@import "./common.css";
 
 /* SearchModalのスタイル */
 .search-modal {
@@ -52,12 +52,17 @@
 
 /* Postの時間 */
 .posted-date {
-  font-size: 0.6rem;
+  font-size: 0.8rem;
 }
 
 /* Postのいいね */
 .like-button {
   cursor: pointer;
+}
+
+/* コメントのモダル */
+.modal-content {
+  background: var(--background);
 }
 
 /* コメントのタイトル */
@@ -69,4 +74,12 @@
 [class^="comment-li-"] {
   list-style-type: none;
   font-size: small;
+}
+
+/* ここからダークテーマ用設定 */
+@media (prefers-color-scheme: dark) {
+  .modal-content {
+    background: var(--background-dark);
+    color: var(--main-white);
+  }
 }
