--- a/views/html/login.html
+++ b/views/html/login.html
@@ -10,7 +10,7 @@
     <!-- BootStrap用CSSをインポート -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="stylesheet" href="../static/css/common.css">
+    <link rel="stylesheet" href="/static/css/common.css">
 </head>
 
 <body>
@@ -48,7 +48,7 @@
 
     </div>
 
-    <script src="../static/js/login.js" type="module"></script>
+    <script src="/static/js/login.js" type="module"></script>
 
     <!-- BootStrap用JSをインポート -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
