--- a/views/html/home.html
+++ b/views/html/home.html
@@ -16,8 +16,7 @@
 
 <body>
 
-    <div class="container-div">
-
+    <div id="container-div" class="container-div">
         <div id="header-div">
             <!-- ナビゲーションバーを含むヘッダーが入る -->
         </div>
@@ -32,6 +31,7 @@
     </div>
 
     <script src="/static/js/header.js" type="module"></script>
+    <script src="/static/js/footer.js" type="module"></script>
     <script src="/static/js/home.js" type="module"></script>
 
     <!-- BootStrap用JSをインポート -->
