--- a/views/html/post.html
+++ b/views/html/post.html
@@ -16,8 +16,7 @@
 
 <body>
 
-    <div class="container-div">
-
+    <div id="container-div" class="container-div">
         <div id="header-div">
             <!-- ナビゲーションバーを含むヘッダーが入る -->
         </div>
@@ -43,10 +42,10 @@
             </div>
 
         </main>
-
     </div>
 
     <script src="/static/js/header.js" type="module"></script>
+    <script src="/static/js/footer.js" type="module"></script>
     <script src="/static/js/postPage.js" type="module"></script>
 
     <!-- BootStrap用JSをインポート -->
