--- a/views/html/privacy_policy.html
+++ b/views/html/privacy_policy.html
@@ -15,8 +15,7 @@
 
 <body>
 
-    <div class="container-div">
-
+    <div id="container-div" class="container-div">
         <div id="header-div">
             <!-- ナビゲーションバーを含むヘッダーが入る -->
         </div>
@@ -163,6 +162,7 @@
     </div>
 
     <script src="/static/js/header.js" type="module"></script>
+    <script src="/static/js/footer.js" type="module"></script>
     <script src="/static/js/privacyPolicy.js" type="module"></script>
 
     <!-- BootStrap用JSをインポート -->
