--- a/views/html/specified_commercial_transaction.html
+++ b/views/html/specified_commercial_transaction.html
@@ -16,8 +16,7 @@
 
 <body>
 
-    <div class="container-div">
-
+    <div id="container-div" class="container-div">
         <div id="header-div">
             <!-- ナビゲーションバーを含むヘッダーが入る -->
         </div>
@@ -98,12 +97,12 @@
                     </table>
 
                 </div>
-
+            </div>
         </main>
-
     </div>
 
     <script src="/static/js/header.js" type="module"></script>
+    <script src="/static/js/footer.js" type="module"></script>
     <script src="/static/js/specifiedCommercialTransaction.js" type="module"></script>
 
     <!-- BootStrap用JSをインポート -->
