#15-feat: ポスト作成画面のデザイン修正。 #15-add: それぞれのページにheader.cssを読み込むように設定。

--- a/views/html/register.html
+++ b/views/html/register.html
@@ -117,7 +117,7 @@
 
     </div>
 
-    <script src="/static/js/header.js" type="module"></script>
+    <!-- <script src="/static/js/header.js" type="module"></script> -->
     <script src="/static/js/footer.js" type="module"></script>
     <script src="/static/js/register.js" type="module"></script>
 
