--- a/static/css/common.css
+++ b/static/css/common.css
@@ -48,6 +48,7 @@ html {
   display: grid;
   grid-template-columns: 1fr 4fr;
   width: 100%;
+  height: 100%;
   padding: 2rem;
 }
 
@@ -81,8 +82,8 @@ main {
 
 /* フッター */
 footer {
-  grid-column-start: 1;
-  grid-column-end: 3;
+  grid-column: 1 / last-line;
+  align-self: self-end;
 }
 
 #footer-div {
