--- a/views/html/specified_commercial_transaction.html
+++ b/views/html/specified_commercial_transaction.html
@@ -12,6 +12,7 @@
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/css/common.css">
     <link rel="stylesheet" href="/static/css/specified_commercial_transaction.css">
+    <link rel="stylesheet" href="/static/css/header.css">
 </head>
 
 <body>
