#15-feat: 保存投稿画面のデザイン修正。

--- a/static/css/post.css
+++ b/static/css/post.css
@@ -10,6 +10,15 @@
   padding: 1rem;
 }
 
+/* すべてのPostを囲むコンテナ (保存ページ用) */
+#saved-posts-div {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 1rem;
+  justify-items: center;
+  padding: 1rem;
+}
+
 /* 各Postのコンテナ */
 .post-card {
   display: grid;
