--- a/views/html/register.html
+++ b/views/html/register.html
@@ -16,10 +16,9 @@
 
 <body>
 
-    <div id="container-div" class="container-div">
-        <div id="header-div">
-            <!-- ナビゲーションバーを含むヘッダーが入る -->
-        </div>
+    <div id="container-div-to-register" class="container-div-to-register">
+        <!-- <div id="header-div">
+        </div> -->
 
         <main>
 
@@ -107,8 +106,8 @@
                 </div>
 
                 <div id="submit-button-div">
-                    <button type="submit" class="btn btn-outline-secondary">
-                        Register
+                    <button type="submit"  id="button-to-register" class="button-to-register">
+                        登録
                     </button>
                 </div>
             </form>
@@ -118,7 +117,7 @@
     </div>
 
     <!-- <script src="/static/js/header.js" type="module"></script> -->
-    <script src="/static/js/footer.js" type="module"></script>
+    <!-- <script src="/static/js/footer.js" type="module"></script> -->
     <script src="/static/js/register.js" type="module"></script>
 
     <!-- BootStrap用JSをインポート -->
