--- a/static/css/create_post.css
+++ b/static/css/create_post.css
@@ -30,6 +30,30 @@
     margin: 0;
 }
 
+/* 投稿するボタン */
+.button-to-post {
+  cursor: pointer;
+  border: solid var(--main-success) 2px;
+  border-radius: 5px;
+  color: var(--main-white);
+  background-color: var(--main-success);
+  padding: 0.4rem 1rem;
+}
+
+.button-to-post:hover,
+.button-to-cancel-to-post:hover {
+  filter: opacity(0.8);
+}
+
+.button-to-cancel-to-post {
+  cursor: pointer;
+  border: solid var(--main-grey) 2px;
+  border-radius: 5px;
+  color: var(--main-white);
+  background-color: var(--main-grey);
+  padding: 0.4rem 1rem;
+}
+
 /* CreatePostのフォームのイメージ要素 */
 #div-for-image {
     display: grid;
@@ -47,6 +71,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    border-radius: 5px;
 }
 
 #image-input-label {
