--- a/views/html/create_post.html
+++ b/views/html/create_post.html
@@ -11,7 +11,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/css/common.css">
-    <link rel="stylesheet" href="/static/css/postPage.css">
     <link rel="stylesheet" href="/static/css/header.css">
     <link rel="stylesheet" href="/static/css/create_post.css">
 </head>
@@ -32,8 +31,8 @@
                         <label for="post-title" id="post-title-label" class="form-label">
                             <input type="text" id="post-title" class="form-control" name="post-title" placeholder="タイトルを入力してください">
                         </label>
-                        <button id="post-button" type="submit" class="btn btn-success">投稿</button>
-                        <button id="cancel-button" class="btn text-bg-light">キャンセル</button>
+                        <button id="post-button" type="submit" class="button-to-post">投稿</button>
+                        <button id="cancel-button" class="button-to-cancel-to-post">キャンセル</button>
                     </div>
 
                     <div id="div-for-image">
@@ -44,7 +43,7 @@
                         </div>
                         <label for="image-input" id="image-input-label" class="form-label">
                             <input type="file" id="image-input" accept="image/*">
-                            <span class="file-name">Choose File</span>
+                            <span class="file-name">アップロード</span>
                         </label>
                     </div>
 
