--- a/views/html/login.html
+++ b/views/html/login.html
@@ -11,37 +11,42 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/css/common.css">
+    <link rel="stylesheet" href="/static/css/login.css">
 </head>
 
 <body>
 
-    <div class="container-div">
+    <div id="container-div-to-login" class="container-div-to-login w-100 h-100 container-sm">
 
-        <main>
+        <main class="w-100 h-100 d-flex justify-content-center align-items-center mb-5 g-3">
 
-            <form id="login-form" class="p-3">
+            <form id="login-form" class="row justify-content-center align-items-center g-5 p-5">
 
-                <div id="div-for-alert">
+                <div id="div-for-alert" class="w-100">
                     <div id="alert-message" class=""></div>
+                </div>
+
+                <div id="div-of-title" class="d-flex justify-content-center">
+                    <h1 id="title-of-login">PRiENT SNS</h1>
                 </div>
 
                 <div class="">
                     <label for="email" class="form-label">Email</label>
                     <input type="email" class="form-control" name="email" id="email" aria-describedby="emailHelpId"
                         placeholder="abc@mail.com" />
-                    <small id="emailHelpId" class="form-text text-muted">Help text</small>
                 </div>
 
                 <div class="">
                     <label for="password" class="form-label">Password</label>
                     <input type="password" class="form-control" name="password" id="password"
                         aria-describedby="passwordHelpId" placeholder="***" />
-                    <small id="passwordHelpId" class="form-text text-muted">Help text</small>
                 </div>
 
-                <button type="submit" class="btn btn-outline-secondary">
-                    Login
-                </button>
+                <div class="d-flex justify-content-center">
+                    <button type="submit" id="button-to-login" class="button-to-login mt-3">
+                        ログイン
+                    </button>
+                </div>
             </form>
 
         </main>
