--- a/views/html/others_account.html
+++ b/views/html/others_account.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/static/css/common.css">
     <link rel="stylesheet" href="/static/css/others_account.css">
     <link rel="stylesheet" href="/static/css/header.css">
+    <link rel="stylesheet" href="/static/css/post.css">
 </head>
 
 <body>
@@ -27,8 +28,8 @@
             <div id="user-profile">
             </div>
 
-            <div class="h-100">
-                <h4>過去の投稿</h4>
+            <div class="h-100 w-80">
+                <h4 class="p-3">過去の投稿</h4>
                 <div id="posts-div">
                 </div>
             </div>
