--- a/views/html/profile.html
+++ b/views/html/profile.html
@@ -82,12 +82,12 @@
 
                         <div id="div-for-buttons">
                             <div id="submit-button-div">
-                                <button type="submit" class="btn btn-outline-success">
+                                <button type="submit" class="button-to-submit-update-of-profile">
                                     更新
                                 </button>
                             </div>
                             <div id="cancel-button-div">
-                                <button type="button" class="btn btn-outline-secondary">
+                                <button type="button" class="button-to-cancel-to-submit">
                                     キャンセル
                                 </button>
                             </div>
