--- a/views/html/create_post.html
+++ b/views/html/create_post.html
@@ -27,6 +27,10 @@
             <div id="div-to-create-post" class="">
                 <form id="post-form">
 
+                    <div id="div-for-alert">
+                        <div id="alert-message" class=""></div>
+                    </div>
+
                     <div id="div-for-post-title">
                         <label for="post-title" id="post-title-label" class="form-label">
                             <input type="text" id="post-title" class="form-control" name="post-title" placeholder="タイトルを入力してください">
